Core and Builtins
-----------------

- Issue #1680159: unicode coercion during an 'in' operation no longer masks
  the underlying error when the coercion fails for the left hand operand.

- Issue #7491: Metaclass's __cmp__ method was ignored.

- Issue #7466: segmentation fault when the garbage collector is called
  in the middle of populating a tuple.  Patch by Florent Xicluna.


Library
-------

- Issue #7349: Make methods of file objects in the io module accept None as an
  argument where file-like objects (ie StringIO and BytesIO) accept them to mean
  the same as passing no argument.

- Issue #7348: StringIO.StringIO.readline(-1) now acts as if it got no argument
  like other file objects.

- Issue #7357: tarfile no longer suppresses fatal extraction errors by
  default.

- Issue #7470: logging: fix bug in Unicode encoding fallback.

- Issue #5949: fixed IMAP4_SSL hang when the IMAP server response is
  missing proper end-of-line termination.

- Issue #7457: added a read_pkg_file method to 
  distutils.dist.DistributionMetadata.


Tests
-----

- Issue #7396: fix regrtest -s, which was broken by the -j enhancement.

- Issue #7498: test_multiprocessing now uses test_support.find_unused_port
  instead of a hardcoded port number in test_rapid_restart.



What's New in Python 2.7 alpha 1
================================

*Release date: 2009-12-05*

Core and Builtins
-----------------

- Issue #7419: setlocale() could crash the interpreter on Windows when called
  with invalid values.

- Issue #3382: 'F' formatting for float and complex now convert the
  result to upper case. This only affects 'inf' and 'nan', since 'f'
  no longer converts to 'g' for large values.

- Remove switch from "%f" formatting to "%g" formatting for floats
  larger than 1e50 in absolute value.

- Remove restrictions on precision when formatting floats.  E.g.,
  "%.120g" % 1e-100 used to raise OverflowError, but now gives the
  requested 120 significant digits instead.
