@@ -24,6 +24,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7231: urllib2 cannot handle https with proxy requiring auth. 
+  Patch by Tatsuhiro Tsujikawa.
+
 - Issue #7349: Make methods of file objects in the io module accept None as an
   argument where file-like objects (ie StringIO and BytesIO) accept them to mean
   the same as passing no argument.
